# foundership-time-tracker

./: .gitignore  README.md  entitlements.plist  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
