[package]
name = "building-tracker"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
rusqlite = "0.32.1"
wifi-rs = "0.2.4"
wifiscanner = "0.5.1"
tokio = "1.39.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
